# rocon_android_apps

./: .gitignore  CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
beacon_awareness/: README.md  build.gradle
beacon_awareness/src/main/: AndroidManifest.xml
beacon_awareness/src/main/res/layout/: activity_beacon_awareness_main.xml  main.xml
beacon_awareness/src/main/res/menu/: menu_beacon_awareness_main.xml
beacon_awareness/src/main/res/values/: strings.xml
beacon_awareness_ex/: build.gradle
beacon_awareness_ex/src/main/: AndroidManifest.xml
beacon_awareness_ex/src/main/res/layout/: activity_beacon_awareness_ex_main.xml
beacon_awareness_ex/src/main/res/menu/: menu_beacon_awareness_ex_main.xml
beacon_awareness_ex/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
map_annotation/: build.gradle
map_annotation/src/main/: AndroidManifest.xml
map_annotation/src/main/res/layout/: annotation_cfg.xml  child_layout.xml  column_info.xml  group_layout.xml  main.xml
map_annotation/src/main/res/values/: strings.xml
motion_retargeting/: build.gradle
motion_retargeting/src/main/: AndroidManifest.xml
motion_retargeting/src/main/res/values/: strings.xml
motion_retargeting_remocon/: build.gradle
motion_retargeting_remocon/src/main/: AndroidManifest.xml
motion_retargeting_remocon/src/main/res/layout/: main.xml
motion_retargeting_remocon/src/main/res/values/: strings.xml
waiterbot_order_app/: build.gradle
waiterbot_order_app/src/main/: AndroidManifest.xml
(+42 files in other folders)
