<?xml version="1.0"?>
<package>
  <name>rocon_android_apps</name>
  <version>0.1.0</version>
  <description>Gathering of ROCON-powered Android apps</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/rocon_android_apps</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>android_apps</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_extras</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>rosjava_tools</build_depend>
</package>